Fix vertical line height - only define on small screens. Works now!

--- a/_sass/_collections.scss
+++ b/_sass/_collections.scss
@@ -112,7 +112,9 @@
 	grid-area: line;
 	position: relative;
 	margin-bottom: 1em;
-	height: 25vh;
+	@media screen and (max-width:767.99px) {
+		height: 25vh;
+	}
 }
 
 .vertical-line {
